add some examples of component anti-patterns

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 
     {{content-for "head"}}
 
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/component-anti-patterns.css">
 
